# wrenpp

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  Wren++.cpp  Wren++.h  build-wren.sh  hello.wren  index.html  install-deps.sh  libwrenly.mri  math.wren  premake5.lua  travis.yml  wrenly.project
bench/: Benchmark.cpp  delta_blue.wren
cmake/: FindWren.cmake
css/: style.css
examples/: build.sh
examples/math/: Main.cpp  math.wren
src/: Assert.h  File.h  Log.h  Main.cpp  Type.cpp  Type.h  Wren++.cpp  Wren++.h  Wren.cpp  Wren.h  Wrenly.cpp  Wrenly.h
src/detail/: ArgumentListString.h  ChunkAllocator.cpp  ChunkAllocator.h  ForeignClass.h  ForeignMethod.h  ForeignObject.h  ForeignProperty.h  Type.cpp  Type.h  TypeId.h
test/: Test.cpp  assert.wren  test.wren  test_method.wren  test_properties.wren  test_vector.wren  transform.wren  vector.wren
